# udacity-robot-sim

./: .gitignore  LICENSE  README.md
src/ball_chaser/: CMakeLists.txt  package.xml
src/ball_chaser/launch/: ball_chaser.launch
src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
src/first_models/models/building/: model.sdf
src/first_models/models/grabber-bot/: model.config  model.sdf
src/first_models/models/robot/: model.sdf
src/first_models/models/teal-wall/: model.sdf
src/my_bot/: CMakeLists.txt  package.xml
src/my_bot/launch/: robot_description.launch  world.launch
src/my_bot/urdf/: my_bot.xacro
src/my_bot/worlds/: stephen.world
src/my_robot/: package.xml
src/my_robot/launch/: robot_description.launch  world.launch
src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
src/my_robot/worlds/: stephen.world
src/myrobot/models/teal-wall/: model.config
src/myrobot/scripts/: hello.cpp
src/myrobot/world/: my-models.world
src/myrobot/worlds/: my-world  submission-world
src/simple_arm/: CMakeLists.txt
src/simple_arm/launch/: robot_spawn.launch
src/simple_arm/src/: arm_mover.cpp  look_away.cpp  simple_mover.cpp
temp-worlds/: grabber-bot-world
